--- a/TableExportExcle/TableExportExcle/MainWindow.xaml
+++ b/TableExportExcle/TableExportExcle/MainWindow.xaml
@@ -35,7 +35,9 @@
                         Grid.Column="2"
                         Grid.ColumnSpan="3">
                 <TextBlock Margin="0,5,0,5" Text="请输入查询语句" />
-                <TextBox Name="TbxSql" Height="50" />
+                <TextBox Name="TbxSql"
+                         Height="50"
+                         Text="select * from Employee e;" />
             </StackPanel>
             <StackPanel Grid.Row="1"
                         Grid.Column="6"
@@ -48,7 +50,7 @@
             <StackPanel Grid.Row="3"
                         Grid.ColumnSpan="7"
                         VerticalAlignment="Center">
-                <ProgressBar Height="20" Margin="5" />
+                <ProgressBar Height="20" Margin="5" Name="PsbProcess"/>
             </StackPanel>
         </Grid>
     </Border>
