--- a/TableExportExcle/TableExportExcle/MainWindow.xaml
+++ b/TableExportExcle/TableExportExcle/MainWindow.xaml
@@ -1,57 +1,76 @@
-﻿<Window x:Class="TableExportExcle.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:TableExportExcle"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="TableExportExcle"
-        Width="800"
-        Height="450"
-        WindowStartupLocation="CenterScreen"
-        mc:Ignorable="d">
-    <Border Margin="10" Padding="10">
+﻿<mah:MetroWindow x:Class="TableExportExcle.MainWindow"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:local="clr-namespace:TableExportExcle"
+                 xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 Title="Table Export Excle"
+                 Width="800"
+                 Height="450"
+                 GlowBrush="Black"
+                 WindowStartupLocation="CenterScreen"
+                 mc:Ignorable="d">
+    <Border Margin="10"
+            Padding="10"
+            Background="AliceBlue"
+            CornerRadius="5">
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="20" />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition Width="20" />
-                <ColumnDefinition />
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="5*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition Height="100" />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
+                <RowDefinition Height="0.5*" />
+                <RowDefinition Height="5*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="1">
-                <TextBlock Margin="0,5,0,5" Text="请选择连接的环境" />
-                <ComboBox />
+                <mah:MetroHeader Margin="0,5,0,5"
+                                 mah:HeaderedControlHelper.HeaderFontWeight="Bold"
+                                 mah:HeaderedControlHelper.HeaderForeground="{DynamicResource MahApps.Brushes.Accent}"
+                                 Header="请选择连接的环境">
+                    <ComboBox>
+                        <ComboBoxItem Content="1" />
+                        <ComboBoxItem Content="2" />
+                        <ComboBoxItem Content="3" />
+                        <ComboBoxItem Content="4" />
+                        <ComboBoxItem Content="5" />
+                    </ComboBox>
+                </mah:MetroHeader>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Grid.Column="2">
+                <mah:MetroHeader Margin="0,5,0,5"
+                                 mah:HeaderedControlHelper.HeaderFontWeight="Bold"
+                                 mah:HeaderedControlHelper.HeaderForeground="{DynamicResource MahApps.Brushes.Accent}"
+                                 Header="请输入查询语句">
+                    <TextBox Name="TbxSql"
+                             Height="250"
+                             Text="select * from Employee e;" />
+                </mah:MetroHeader>
             </StackPanel>
             <StackPanel Grid.Row="1"
-                        Grid.Column="2"
-                        Grid.ColumnSpan="3">
-                <TextBlock Margin="0,5,0,5" Text="请输入查询语句" />
-                <TextBox Name="TbxSql"
-                         Height="50"
-                         Text="select * from Employee e;" />
-            </StackPanel>
-            <StackPanel Grid.Row="1"
-                        Grid.Column="6"
-                        VerticalAlignment="Center">
+                        Grid.Column="5"
+                        VerticalAlignment="Top">
+                <TextBlock Margin="0,5,0,5" />
                 <Button Name="BtnOK"
-                        Margin="0,5,0,5"
                         Click="BtnOK_Click"
-                        Content="确认" />
+                        Content="导出"
+                        Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
             </StackPanel>
             <StackPanel Grid.Row="3"
-                        Grid.ColumnSpan="7"
+                        Grid.ColumnSpan="5"
                         VerticalAlignment="Center">
-                <ProgressBar Height="20" Margin="5" Name="PsbProcess"/>
+                <ProgressBar Name="PsbProcess"
+                             Height="20"
+                             Margin="5" />
+                <!--<mah:MetroProgressBar Width="250"
+                                      Margin="4"
+                                      IsIndeterminate="True" />-->
             </StackPanel>
         </Grid>
     </Border>
-</Window>
+</mah:MetroWindow>
