--- a/TableExportExcle/TableExportExcle/App.xaml
+++ b/TableExportExcle/TableExportExcle/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TableExportExcle"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/Window1.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
