--- a/TableExportExcle/TableExportExcle/MainWindow.xaml
+++ b/TableExportExcle/TableExportExcle/MainWindow.xaml
@@ -98,6 +98,7 @@
                                     <ColumnDefinition />
                                     <ColumnDefinition />
                                     <ColumnDefinition />
+                                    <ColumnDefinition />
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="{Binding}" />
                                 <TextBlock Grid.Column="1"
@@ -109,6 +110,10 @@
                                         Command="{Binding DataContext.BtnRemove, RelativeSource={RelativeSource AncestorType=Window}}"
                                         CommandParameter="{Binding}"
                                         Content="删除" />
+                                <Button Grid.Column="3"
+                                        Margin="5"
+                                        Command="{Binding DataContext.BtnShowDialog, RelativeSource={RelativeSource AncestorType=Window}}"
+                                        Content="弹出新窗口" />
 
                             </Grid>
                         </DataTemplate>
