--- a/TableExportExcle/TableExportExcle/View/Window1.xaml
+++ b/TableExportExcle/TableExportExcle/View/Window1.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:TableExportExcle.View"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="Window1"
+        Title="事件处理"
         Width="600"
         Height="600"
         mc:Ignorable="d">
