复杂的通过字典、action、字符串标识 桥梁来实现 mvvm方式的窗口弹出并绑定datacontext（含传递参数）

--- a/TableExportExcle/TableExportExcle/MainWindow.xaml
+++ b/TableExportExcle/TableExportExcle/MainWindow.xaml
@@ -113,7 +113,8 @@
                                 <Button Grid.Column="3"
                                         Margin="5"
                                         Command="{Binding DataContext.BtnShowDialog, RelativeSource={RelativeSource AncestorType=Window}}"
-                                        Content="弹出新窗口" />
+                                        CommandParameter="{Binding}"
+                                        Content="弹出" />
 
                             </Grid>
                         </DataTemplate>
